Modify slurm settings

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,35 +6,32 @@ params {
 
 process {
     executor = 'slurm'
+    clusterOptions = '-A chengqiyi_g1 --qos=chengqiyicnl'
 
     publishDir = [
         path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-        mode: 'copy',
-        saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        mode: 'copy'
     ]
 
     withName: 'BEDTOOLS_EXTRACT_SITES' {
         container = "${baseDir}/images/common_tools.sif"
         cpus      = 1
-        memory    = '4.GB'
         time      = 24.h
-        queue     = 'fat4way'
+        queue     = 'cn-long'
     }
 
     withName: 'CALCULATE_DMR_METHYLATION' {
         container = "${baseDir}/images/common_tools.sif"
         cpus      = 1
-        memory    = '4.GB'
         time      = 24.h
-        queue     = 'fat4way'
+        queue     = 'cn-long'
     }
 
     withName: 'GENERATE_METHYLATION_MATRIX' {
         container = "${baseDir}/images/common_tools.sif"
         cpus      = 20
-        memory    = '64.GB'
         time      = 24.h
-        queue     = 'fat4way'
+        queue     = 'cn-long'
     }
 }
 
