Update .gitignore and modify Nextflow configuration and DMR calculation process
- Added 'work/' and 'images/' to .gitignore to exclude temporary and output files.
- Updated output directory parameter in nextflow.config from 'outdir' to 'output_dir'.
- Changed output file naming in CALCULATE_DMR_METHYLATION process to include '_DMR' suffix for clarity.

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,7 +9,7 @@ process {
     clusterOptions = '-A chengqiyi_g1 --qos=chengqiyicnl'
 
     publishDir = [
-        path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
+        path: { "${params.output_dir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
         mode: 'copy'
     ]
 
