Add PLOT_HEATMAP process and integrate heatmap generation into workflow
- Introduced the PLOT_HEATMAP process in `nextflow.config` with resource specifications.
- Updated `plot.nf` to include the PLOT_HEATMAP module, linking it to the output of the GENERATE_METHYLATION_MATRIX process.
- Implemented the `plot_heatmap.py` script for generating heatmaps from methylation data, including data preprocessing and visualization features.
- Enhanced the `main` function to support command-line options for input, output, and filtering parameters.

--- a/nextflow.config
+++ b/nextflow.config
@@ -33,6 +33,13 @@ process {
         time      = 24.h
         queue     = 'cn-long'
     }
+
+    withName: 'PLOT_HEATMAP' {
+        container = "${baseDir}/images/common_tools.sif"
+        cpus      = 4
+        time      = 24.h
+        queue     = 'cn-long'
+    }
 }
 
 profiles {
