Add calculation mode option for DMR methylation analysis
- Introduced a new parameter `mode` in `nextflow.config` to specify the calculation method (average rates or sum of counts).
- Updated the `plot.nf` workflow to pass the `mode` parameter to the `CALCULATE_DMR_METHYLATION` process.
- Enhanced the `calculate_dmr_methylation.py` script to handle both 'rate' and 'count' modes, adjusting data processing and output accordingly.
- Modified the `main.nf` process to accept and utilize the `mode` parameter in the command execution.

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,6 +2,7 @@ params {
     input_csv      = null
     input_bed      = null
     output_dir     = null
+    mode           = 'rate'
 }
 
 process {
